fix home button alignment

--- a/app/assets/stylesheets/_activities.scss
+++ b/app/assets/stylesheets/_activities.scss
@@ -23,9 +23,6 @@
 
 #summary {
   text-align: center;
-  a {
-    width: 100%;
-  }
 }
 
 #summary_user_input {
