--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,7 @@ p {
   margin-top: 40px;
 
 }
+
+.mdl-layout__header-row {
+  padding-left: 0;
+}
